--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "stdio.h": "c",
         "stdlib.h": "c",
         "unistd.h": "c"
-    }
+    },
+    "files.trimTrailingWhitespace": true
 }
